fix: provide sufficient contrast for light grey badges

--- a/src/main/webapp/uii/templatePG/css/src/base/_colors-custom.scss
+++ b/src/main/webapp/uii/templatePG/css/src/base/_colors-custom.scss
@@ -47,7 +47,7 @@ $colors-badges: (
   light-purple: #8947cc,
   light-lila: #500899,
   light-greengrey: #617f7d,
-  light-grey: #777,
+  light-grey: #666,
   light-green2: #3b7f7b,
   light-brown1: #3e2115,
   light-brown2: #74422b,
